--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>graphicsAI</title>
+    <title>graphicsAI : Editor</title>
 </head>
 <body>
-    
+    <div id="root"></div>
+    <canvas id="webgl"></canvas>
 </body>
 </html>
