--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,29 @@
     <title>graphicsAI : Editor</title>
 </head>
 <body>
-    <div id="root"></div>
+    <!-- <header>
+        <div id="menubar">
+            <img src="./blender-icons/blender.svg" width="50px">
+            <ul id="menu">
+                <li>
+                    <ul id="menu_file" class="menu_option">File
+                        <li>
+                            <div id="file_new" class="menu_item">
+                                <img src="./blender-icons/file_new.svg">New
+                            </div>
+                        </li>
+                        <li>
+                            <div id="file_open" class="menu_item">
+                                <img src="./blender-icons/file_folder.svg">Open
+                            </div>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>    
+    </header> -->
+    <div style="text-align:center;">Keyboard Controls: G-translate R-rotate S-scale</div>
+    <div style="text-align:center;">Use mouse to move camera</div>
     <canvas id="webgl"></canvas>
 </body>
 </html>
