--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>graphicsAI : Editor</title>
+    <title> 🤖 graphicsAI : Editor</title>
 </head>
 <body>
     <!-- <header>
@@ -27,8 +27,20 @@
             </ul>
         </div>    
     </header> -->
-    <div style="text-align:center;">Keyboard Controls: G-translate R-rotate S-scale</div>
-    <div style="text-align:center;">Use mouse to move camera</div>
-    <canvas id="webgl"></canvas>
+    <div id="editor">
+        <div id="viewport-container">
+            <canvas id="webgl"></canvas>
+        </div>
+        <div id="sidepane">
+            <div>Keyboard Controls: 
+                <ul>
+                    <li>G - Translate</li> 
+                    <li>R - Rotate</li> 
+                    <li>S - Scale</li>
+                </ul>
+            </div>
+            <div>Use mouse/touch to move camera</div>
+        </div>
+    </div>
 </body>
 </html>
