added toolbox🛠️ and updated interactive mesh

--- a/src/index.html
+++ b/src/index.html
@@ -31,16 +31,7 @@
         <div id="viewport-container">
             <canvas id="webgl"></canvas>
         </div>
-        <div id="sidepane">
-            <div>Keyboard Controls: 
-                <ul>
-                    <li>G - Translate</li> 
-                    <li>R - Rotate</li> 
-                    <li>S - Scale</li>
-                </ul>
-            </div>
-            <div>Use mouse/touch to move camera</div>
-        </div>
+        <div id="sidepane"></div>
     </div>
 </body>
 </html>
