fixed- toolbox; added- matrial properties, delete object option; updated- viewport UI, controlled camera properties

--- a/src/index.html
+++ b/src/index.html
@@ -6,32 +6,12 @@
     <title> 🤖 graphicsAI : Editor</title>
 </head>
 <body>
-    <!-- <header>
-        <div id="menubar">
-            <img src="./blender-icons/blender.svg" width="50px">
-            <ul id="menu">
-                <li>
-                    <ul id="menu_file" class="menu_option">File
-                        <li>
-                            <div id="file_new" class="menu_item">
-                                <img src="./blender-icons/file_new.svg">New
-                            </div>
-                        </li>
-                        <li>
-                            <div id="file_open" class="menu_item">
-                                <img src="./blender-icons/file_folder.svg">Open
-                            </div>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-        </div>    
-    </header> -->
     <div id="editor">
-        <div id="viewport-container">
+        <canvas id="webgl"></canvas>
+        <!-- <div id="viewport-container">
             <canvas id="webgl"></canvas>
         </div>
-        <div id="sidepane"></div>
+        <div id="sidepane"></div> -->
     </div>
 </body>
 </html>
