--- a/src/index.html
+++ b/src/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> 🤖 graphicsAI : Editor</title>
+    <title> graphicsAI : Editor</title>
+    <link rel="icon" href="/images/graphicsAI-Icon.png" type="image/png">
 </head>
+
 <body>
     <div id="editor">
         <canvas id="webgl"></canvas>
-        <!-- <div id="viewport-container">
-            <canvas id="webgl"></canvas>
-        </div>
-        <div id="sidepane"></div> -->
     </div>
 </body>
+
 </html>
