fix: update graphicsAI-Icon path

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> graphicsAI : Editor</title>
-    <link rel="icon" href="/images/graphicsAI-Icon.png" type="image/png">
+    <link rel="icon" href="./images/graphicsAI-Icon.png" type="image/png">
 </head>
 
 <body>
