fix: Update logo path in offcanvas nav-bar

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
           </button>
           <div class="offcanvas offcanvas-start bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
             <div class="offcanvas-header">
-                <img id="offcanvas-img" src="/images/graphicsAI-Icon.png" alt="" style="height: 2em">
+                <img id="offcanvas-img" src="./images/graphicsAI-Icon.png" alt="" style="height: 2em">
                 <h5 class="offcanvas-title m-1" id="offcanvasNavbarLabel">graphicsAI</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
             </div>
